# DroneStalker

./: .gitignore  README.md
data/: README.md
fan-speed/: README.md  download.py  main.py  pyproject.toml  rpm_estimator.py  visualize.py
prediction/: generate_video_frames.py  main.py  pyproject.toml  video.py
scripts/: create_videos.py  create_videos_mp4.py
web/: instrumentation-client.ts  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/tts/: route.ts
web/app/login/: page.tsx
web/app/super-secured-hacking-platform-do-not-share-this-link-with-anyone/: commander-video.tsx  controls.tsx  page.tsx  texting-chat.tsx  you.tsx
web/app/super-secured-hacking-platform-do-not-share-this-link-with-anyone/main-panel/: code.tsx  codes.ts  credits.tsx  projectile-canvas.tsx  video-feed.tsx
web/components/: click-to-enter.tsx  sfx.tsx  tts.tsx  viewport.tsx
web/components/ui/: button.tsx  input.tsx
web/lib/: drone-coordinates.ts  highlight.ts  open-animation.ts  store.ts
web/public/data/0/: coordinates.txt
web/public/data/132/: coordinates.txt
web/public/data/230/: coordinates.txt
web/public/data/60/: coordinates.txt
yolo/: annotate.py  convert_to_yolo.py  data.py  make_vid.py  pyproject.toml  render_events.py  yolo_fred_train.ipynb  yolo_test.py
